# Billions

./: .flake8  .gitignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  API_TESTING_RESULTS.md  BILLIONS_SYSTEM_DRAWIO_FIXED.xml  CHANGELOG.md  COMMIT_PHASE3.md  CONTRIBUTING.md  CREATE_ENV_FILE.md  DEVELOPMENT.md  FAQ.md  GIT_COMMIT_SUMMARY.md  GOOGLE_OAUTH_SETUP.md  LICENSE  MILESTONE_50PERCENT.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  PHASE5_CURRENT.md  PHASE5_MVP_COMPLETE.md  PHASE5_PROGRESS.md  PHASES_123_COMPLETE.md  PLAN.md  QUICKSTART.md  README.md  README_TESTING.md  README_WEBAPP.md  READY_TO_DEPLOY.md  SCATTER_PLOT_DEBUGGING.md  SCATTER_PLOT_ZOOM_ADDED.md  SCREENSHOTS.md  SECRET_ERROR_FIXED.md  SECURITY.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  SIMPLE_START.md  (+33 more)
.github/workflows/: deploy.yml  lint.yml  python-app.yml  test.yml
api/: Dockerfile.dev  __init__.py  config.py  database.py  main.py  requirements-dev.txt  requirements.txt
api/models/: behavioral_models.py
api/routers/: __init__.py  behavioral.py  capitulation.py  hft.py  historical.py  market.py  nasdaq_news.py  news.py  outliers.py  portfolio.py  predictions.py  trading.py  users.py  valuation.py
api/services/: __init__.py  advanced_hype_detector.py  behavioral_service.py  black_scholes.py  capitulation_detector.py  enhanced_capitulation_detector.py  enhanced_news_service.py  market_data.py  markov_predictor.py  nasdaq_news_service.py  outlier_detection.py  predictions.py  trading_service.py
api/tests/: __init__.py  conftest.py  test_main.py  test_market.py  test_outliers.py  test_predictions.py  test_users.py
cache/: QMMM_1d.csv  SPY_1d.csv  XLB_1d.csv  XLC_1d.csv  XLE_1d.csv  XLF_1d.csv  XLI_1d.csv  XLK_1d.csv  XLP_1d.csv  XLRE_1d.csv  XLU_1d.csv  XLV_1d.csv  XLY_1d.csv
db/: core.py  models.py  models_auth.py
funda/: SPS.py  billions.db  enhanced_features.py  fine_tuning_strategy.py  model_diagnostics.py  outlier_engine.py  refresh_outliers.py  train_lstm_model.py
funda/assets/: custom-font.css
funda/cache/: ABVX_1d.csv  ALAB_1d.csv  APP_1d.csv  CRDO_1d.csv  LULU_1d.csv  MSTR_1d.csv  NVTS_1d.csv  ONDS_1d.csv  OPEN_1d.csv  ORBS_1d.csv  QMMM_1d.csv  QURE_1d.csv  RGTI_1d.csv  RKLB_1d.csv  SMMT_1d.csv  SPY_1d.csv  TMC_1d.csv  TSLA_1d.csv  WIX_1d.csv  XLB_1d.csv  XLC_1d.csv  XLE_1d.csv  XLF_1d.csv  (+8 more)
hft_engine/: CMakeLists.txt  build.bat  build.sh
hft_engine/examples/: hft_example.cpp
hft_engine/include/: alpaca_websocket_client.h  hft_engine.h  market_data_ingestion.h  order_executor.h  signal_processor.h
hft_engine/python_bindings/: bindings.cpp
hft_engine/src/: alpaca_websocket_client.cpp  alpaca_websocket_python.cpp  market_data_ingestion.cpp
outlier/: Outlier_Nasdaq_Longterm.py  Outlier_Nasdaq_Scalp.py  Outlier_Nasdaq_Swing.py
web/: Dockerfile.dev  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+72 files in other folders)
